Fix callout icon clipping

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -382,6 +382,9 @@
     background-image: url('../img/icon-check-gray-small.png');
     background-position: left .25em;
     background-repeat: no-repeat;
+    background-size: 2em;
+    margin-bottom: 0;
+    padding-bottom: 1em;
     padding-left: 3em;
   }
 
